gcc/testsuite/rust/rustc/ui/issues/issue-50403.rs
#![feature(concat_idents)]

fn main() {
    let x = concat_idents!(); // { dg-error "" "" { target *-*-* } }
}

